<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Titulos strings introduccion -->
    <string name="titulo_introduccion_1">Learn about music</string>
    <string name="titulo_introduccion_2">Multimedia resources</string>
    <string name="titulo_introduccion_3">Test yourself</string>
    <string name="titulo_introduccion_4">Face the best</string>

    <!-- Strings introduccion -->
    <string name="introduccion_1">Learn by answering questions about different musical genres.</string>
    <string name="introduccion_2">The questions may have an image, video or sound related to the question.</string>
    <string name="introduccion_3">Tere are three difficulties and depending on the one selected, the time to answer the questions will vary.</string>
    <string name="introduccion_4">Once you\'re finished you will get a score and a musical artist. If the score is high, you could lead the matches leaderboard.</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="usuario">User: </string>
    <string name="edad">Age: </string>
    <string name="avatar">Avatar: </string>
    <string name="seleccionar_avatar">Open Avatar</string>
    <string name="deseleccionar_avatar">Close Avatar</string>

    <!-- Niveles de dificultad + tiempo -->
    <string name="facil">Easy</string>
    <string name="medio">Medium</string>
    <string name="dificil">Hard</string>

    <!-- Botones -->
    <string name="siguiente">Next</string>
    <string name="atras">Back</string>

    <!-- Puntuacion -->
    <string name="info_puntuacion">Your puntuation: </string>

    <!-- Ranking -->
    <string name="ranking_resultado_no_encontrado">Results not found</string>

    <string name="ranking">Ranking</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>