<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/diary"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textSize="40sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/layoutUsuario"
        android:layout_width="800dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lblLoginUsuario"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:gravity="end"
            android:fontFamily="@font/diary"
            android:textColor="@color/black"
            android:text="@string/usuario"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/txtNombreUsuario"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:background="@color/white"
            android:maxLength="10"
            android:textSize="30sp"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:fontFamily="@font/diary"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@drawable/botonverde"
            android:fontFamily="@font/diary"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEdad"
        android:layout_width="800dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lblEdad"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:gravity="right"
            android:fontFamily="@font/diary"
            android:text="@string/edad"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <CheckBox
            android:id="@+id/cbxMayorEdad"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:scaleX="2"
            android:scaleY="2" />

        <TextView
            android:id="@+id/mayorEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/diary"
            android:text="+18"
            android:textSize="30sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAvatar"
        android:layout_width="800dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lblAvatar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:gravity="right"
            android:fontFamily="@font/diary"
            android:textColor="@color/black"
            android:text="@string/avatar"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btnSelecAvatar"
            android:layout_width="235dp"
            android:layout_height="36dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/botonverde"
            android:fontFamily="@font/diary"
            android:text="@string/seleccionar_avatar"
            android:textColor="@color/white" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgAvatarSelect"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/roundImageView"
            android:background="@color/white"/>



    </LinearLayout>

    <GridView
        android:id="@+id/gvAvatares"
        android:layout_width="800dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_style3"
        android:columnWidth="110dp"
        android:horizontalSpacing="50dp"
        android:numColumns="5"
        android:padding="15dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="8dp"
        android:visibility="invisible"
        android:gravity="center"/>

    <!--
    <ImageView
        android:id="@+id/imgAvatarSelect"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginStart="720dp"
        android:layout_marginTop="250dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    -->


</LinearLayout>